# anki-periodic-table-memory-pegs

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  card1_front.html  card2_front.html  card4_front.html  data-html.csv  data.json  environment.yaml  main.py  pyproject.toml
src/: data.json  desc.html
src/templates/: card1_front.html  card2_front.html  card3_front.html  card4_front.html  card5_front.html  card_back.html  card_front.html  stylesheet.css
